--- a/app/views/vacancies/edit.html.erb
+++ b/app/views/vacancies/edit.html.erb
@@ -22,5 +22,5 @@
     <%= select_tag :skills, options_from_collection_for_select(Skill.all, "id", "name", @vacancy.skill_ids), class: "skills", multiple: true, style: "width:100%;" %>
   </div>
 
-  <div style="padding:10px 0;"><%= submit_tag "Добавить" %></div>
+  <div style="padding:10px 0;"><%= submit_tag "Обновить", class: "btn btn-primary" %></div>
 <% end %>
