--- a/app/views/vacancies/index.html.erb
+++ b/app/views/vacancies/index.html.erb
@@ -1,14 +1,14 @@
 <h1>Вакансии</h1>
 <div>
   <div style="float:left;">
-    <%= link_to "Резюме", resumes_path, class: "btn btn-default" %>
-  </div>
-  <div style="float:right;">
     <%= link_to "Новая вакансия", new_vacancy_path, class: "btn btn-primary" %>
   </div>
+  <div style="float:right;">
+    <%= link_to "Резюме", resumes_path, class: "btn btn-default" %>
+  </div>
 </div>
-<div>
-  <table style="padding-top:20px;">
+<div style="clear: both;padding-top: 20px;">
+  <table>
     <tr>
       <td>Название</td>
       <td>Дата создания</td>
