--- a/app/assets/stylesheets/skills.scss
+++ b/app/assets/stylesheets/skills.scss
@@ -1,3 +1,9 @@
 // Place all the styles related to the Skills controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.skill_tag {
+  padding: 3px 5px;
+  background: #ccc;
+  border-radius: 5px;
+}
