--- a/app/views/resumes/new.html.erb
+++ b/app/views/resumes/new.html.erb
@@ -10,21 +10,25 @@
 <div style="clear: both;padding-top: 20px;">
   <%= form_tag resumes_path do %>
     <div style="padding:10px 0;">
-      Название:
+      ФИО:
       <%= text_field_tag :name, "", style: "width:100%;" %>
     </div>
-    <!-- <div style="padding:10px 0;">
-      Доступна до:
-      <%#= datetime_select :validity, Time.now, discard_type: true, style: "width:100%;" %>
+    <div style="padding:10px 0;">
+      Статус:
+      <%= select_tag :status, options_for_select(["Работаю", "Не работаю"]), style: "width:100%;" %>
+    </div>
+    <div style="padding:10px 0;">
+      Телефон:
+      <%= number_field_tag :phone, "", style: "width:100%;" %>
+    </div>
+    <div style="padding:10px 0;">
+      Электронная почта:
+      <%= text_field_tag :email, "", style: "width:100%;" %>
     </div>
     <div style="padding:10px 0;">
       Заработная плата в рублях:
-      <%#= number_field_tag :price, "", style: "width:100%;" %>
+      <%= number_field_tag :price, "", style: "width:100%;" %>
     </div>
-    <div style="padding:10px 0;">
-      Контактная информация:
-      <%#= text_area_tag :contacts, "", style: "width:100%;resize:vertical;" %>
-    </div> -->
 
     <div style="padding:10px 0;">
       Скилы:
